--- a/20170808/style.css
+++ b/20170808/style.css
@@ -1,7 +1,7 @@
 .box{
     width: 50px;
     height: 50px;
-    background-color: #f00;
+    background-color: rgb(100,200,100);
     border-radius: 50%;
     position: relative;
     top:0;
